# rtsp-player-rs

./: .gitignore  Cargo.toml
example/: Cargo.toml
example/src/: main.rs
example/src/glarea/: imp.rs  mod.rs  render.rs
flutter/: LICENSE  build.yaml  flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/: build.gradle  settings.gradle
flutter/android/src/main/: AndroidManifest.xml
flutter/cargokit/build_tool/lib/src/: builder.dart
flutter/example/: README.md  pubspec.yaml
flutter/example/android/app/: build.gradle
flutter/example/android/app/src/main/: AndroidManifest.xml
flutter/example/android/app/src/main/kotlin/com/example/flutter_gstreamer_example/: MainActivity.kt
flutter/example/ios/Runner/: Info.plist
flutter/example/ios/Runner.xcodeproj/: project.pbxproj
flutter/example/lib/: main.dart
flutter/example/linux/: CMakeLists.txt  my_application.cc
flutter/example/linux/flutter/: generated_plugins.cmake
flutter/example/macos/Runner.xcodeproj/: project.pbxproj
flutter/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/example/macos/Runner/Configs/: AppInfo.xcconfig
flutter/example/windows/: CMakeLists.txt
flutter/example/windows/flutter/: generated_plugins.cmake
flutter/example/windows/runner/: Runner.rc  main.cpp
flutter/ios/: flutter_gstreamer.podspec
flutter/lib/: flutter_gstreamer.dart
flutter/lib/dtos/: audio_device.dart  playable.dart  player_state.dart  player_stream.dart  track.dart
flutter/lib/dtos/media/: media.dart  media_native.dart
flutter/lib/managers/: platform_stream.dart  player.dart
flutter/lib/managers/backends/: native_streamer.dart
flutter/lib/managers/bases/: platform_stream.dart
flutter/lib/managers/utils/: asset_loader.dart  native_reference_holder.dart  temp_file.dart
flutter/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
flutter/lib/video/: README.md
flutter/lib/video/controller/: platform_video_controller.dart  video_controller.dart
flutter/lib/video/controller/native_video_controller/: real.dart  stub.dart
flutter/lib/video/dtos/: video_widget_config.dart
flutter/lib/video/state/: video_state.dart  video_state.g.dart
flutter/lib/video/widgets/: video.dart
flutter/linux/: CMakeLists.txt
flutter/macos/: flutter_gstreamer.podspec
flutter/rust/: Cargo.toml
flutter/rust/src/: api.rs  frb_generated.rs  lib.rs
flutter/rust/src/core/: session.rs
flutter/test/: mocks.dart
flutter/test/integration/: base_url_test.dart  cancel_retry_test.dart  cancel_token_test.dart  interceptor_test.dart  retry_interceptor_test.dart
flutter/windows/: CMakeLists.txt
flutter_example/my_app/: pubspec.yaml
flutter_example/my_app/lib/src/rust/: frb_generated.dart
flutter_example/my_app/rust/: Cargo.toml
flutter_example/my_app/rust/src/: lib.rs
flutter_example/my_app/rust/src/dtos/: context.rs  mod.rs
flutter_example/my_app/rust/src/utils/: flutter_texture.rs  mod.rs
rtsp-player-rs/: Cargo.toml
rtsp-player-rs/src/: flutter_texture.rs  lib.rs  utils.rs
rtsp-player-rs/src/models/: images.rs
